# video_subtitler

./: .replit  Docker.md  Dockerfile  README.md  app.py  pyproject.toml  replit.nix  test_moviepy.py
attached_assets/: Pasted-Build-a-web-application-that-replicates-the-core-functionality-of-Opus-pro-generate-accurate-subtit-1744143183326.txt  Pasted-Build-a-web-application-that-replicates-the-core-functionality-of-Opus-pro-generate-subtitles-from--1744143859398.txt  Pasted-Error-generating-video-Failed-to-embed-subtitles-ffmpeg-version-6-1-1-Copyright-c-2000-2023-the--1744192168616.txt  Pasted-I-need-you-to-develop-a-complete-application-that-Accepts-video-uploads-from-users-Extracts-audio--1744141279574.txt
static/css/: custom.css
static/js/: script.js
templates/: edit.html  index.html  layout.html  preview.html
test_files/: test.srt  test_shlex.py
utils/: subtitle_generator.py  video_processor.py
