[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "decorator>=5.2.1",
    "deep-translator>=1.11.4",
    "email-validator>=2.2.0",
    "faster-whisper>=1.1.1",
    "ffmpeg-python>=0.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "langdetect>=1.0.9",
    "moviepy>=2.1.2",
    "numpy>=2.2.4",
    "openai>=1.71.0",
    "proglog>=0.1.11",
    "psycopg2-binary>=2.9.10",
    "pydub>=0.25.1",
    "python-ffmpeg>=2.0.12",
    "speechrecognition>=3.14.2",
    "tqdm>=4.67.1",
    "werkzeug>=3.1.3",
    "whisper>=1.1.10",
]
